--- a/config/locales/for_use_loomio-1_how-it-works-updated-video_el.yml
+++ b/config/locales/for_use_loomio-1_how-it-works-updated-video_el.yml
@@ -12,7 +12,7 @@ el:
     t4: |
       Είναι πραγματικό απλό, δεν χρειάζεται καν να δημιουργήσουν έναν λογαριασμό. Οι συζητήσεις στο Loomio μπορούν να είναι δημόσιες ή ιδιωτικές.
     t5: |
-      Επειδή είναι σε απευθείας σύνδεση, όλα τα είδη των ατόμων
+      Επειδή είναι ηλεκτρονικά, όλα τα είδη των ατόμων
       μπορούν να συμμετάσχουν από οπουδήποτε, οποιαδήποτε στιγμή.
     t6: |
       Μπορούμε να συγκεντρώσουμε από κοινού τις σχετικές πληροφορίες και να χτίσουμε με κοινό την κατανόηση. Οποιοσδήποτε μπορεί να προτείνει μια λύση.
@@ -29,10 +29,10 @@ el:
       Μερικές φορές μια πρώιμη πρόταση αποτυχάνοντας μπορεί να είναι ένα δημιουργικό βήμα, που οδηγεί σε μια νέα πρόταση καθοδηγούμενη απ' όλων τις ανησυχίες.
     t12: |
       Ωραίες ιδέες μπορούν να έρθουν από παντού.
-      Κανείς δεν γνωρίζει ποιές όλες οι πιθανότητες θα είναι.
+      Κανείς δεν γνωρίζει ποιές θα είναι όλες οι πιθανότητες.
     t13: |
       Επειδή όλοι σκέφτεστε μαζί,
-      όταν θα καταλήξετε σε μια απόφαση, όλοι είναι στο πλοίο.
+      όταν θα καταλήξετε σε μια απόφαση, όλοι είναι ενήμεροι.
     t14: |
       Όλη η ομάδα ειδοποιείται για το αποτέλεσμα,
       ώστε να μπορείτε να ξεκινήσετε την δράση μαζί.
@@ -44,8 +44,8 @@ el:
     t17: |
       Χιλιάδες άτομα έχουν ήδη αγαπήσει το Loomio.
     t18: |
-      Γίνονται με περισσότερο περιεκτικοί, και σπαταλάνε λιγότερο χρόνο
-      και ενεέργεια για να βγάζουν καλύτερα αποτελέσματα
+      Γίνονται περισσότερο περιεκτικοί, και σπαταλάνε λιγότερο χρόνο
+      και ενέργεια για να βγάζουν καλύτερα αποτελέσματα
     t19: |
       Φανταστείτε να χρησιμοποιείται το Loomio στον χώρο εργασίας σας και στην κοινότητα σας.
     t20: |
@@ -53,7 +53,7 @@ el:
     t21: |
       Τώρα χτίζουμε την επόμενη έκδοση του Loomio.
     t22: |
-      Είναι κινητού έκδοση και έτσι θα δουλεύει και στο κινηρό σας και σε όλα τα είδη των συσκευών σας.
+      Είναι κινητού έκδοση και έτσι θα δουλεύει και στο κινητό σας και σε όλα τα είδη των συσκευών σας.
     t23: |
       Είναι προσβάσιμο σε άτομα με όλες τις ικανότητες.
     t24: |
@@ -61,7 +61,7 @@ el:
     t25: |
       Και το καλύτερο απ' όλα, το Loomio 1.0 είναι πραγματικό εύκολο στην χρήση.
     t26: |
-      Είναι ένα ολοκαίρνουριο Loomio για πραγματική περιεκτική διαδικασία λήψης αποφάσεων.
+      Είναι ένα ολοκαίνουριο Loomio για πραγματική περιεκτική διαδικασία λήψης αποφάσεων.
     t27: |
       Και για αυτό τώρα, χρειαζόμαστε την βοήθεια σας.
     t28: |
