update languages ,, zh_TW  etc

--- a/config/locales/for_use_loomio-1_how-it-works-updated-video_de.yml
+++ b/config/locales/for_use_loomio-1_how-it-works-updated-video_de.yml
@@ -24,11 +24,11 @@ de:
       Keiner kennt alle Möglichkeiten von Anfang an.
     t13: "Da die Ideen gemeinschaftlich entstehen, werden \ngetroffene Entscheidungen auch von allen zusammen getragen.\n"
     t14: "Die ganze Gruppe wird über das Ergebnis informiert und \nkann damit beginnen, entsprechende Aktionen einzuleiten.\n"
-    t15: "Wenn viele Entscheidungen mit den selben Leuten getroffen werden, \nkann Loomio zum Zuhause für die ganze Gruppe werden.\n"
+    t15: "Wenn viele Entscheidungen mit den selben Leuten getroffen werden, \nkann Loomio zum Online-Zuhause für die ganze Gruppe werden.\n"
     t16: |
-      Alle Entscheidungsprozesse werden laufend archiviert und können jederzeit eingesehen werden.
+      Alle Entscheidungsprozesse werden laufend archiviert und können jederzeit von allen eingesehen werden.
     t17: |
-      Tausende Leute sind von Loomio bereits überzeugt.
+      Tausende Leute sind bereits von Loomio überzeugt.
     t18: "Sie sind offener und benötigen weniger Zeit \nund Energie, um an bessere Lösungen zu kommen.\n"
     t19: |
       Stellen Sie sich vor, Loomio an Ihrem Arbeitsplatz und in Ihrem Umfeld einzusetzen.
@@ -47,7 +47,7 @@ de:
     t26: |
       Ein komplett neues Loomio für wahrhaft offene Entscheidungsfindung.
     t27: |
-      Genau dafür benöten wir jetzt Ihre Hilfe.
+      Genau dafür benötigen wir jetzt Ihre Hilfe.
     t28: |
       Wir begrüßen freiwillige Spenden und möchten Loomio 1.0 via Crowdfunding finanzieren.
     t29: |
