--- a/config/locales/for_use_loomio-1_how-it-works-video_pt_BR.yml
+++ b/config/locales/for_use_loomio-1_how-it-works-video_pt_BR.yml
@@ -1,11 +1,11 @@
 pt_BR:
   t1: Loomio é uma simples ferramenta on-line de fácil utilização para colaboração em grupo.
-  t2: Ele fornece um espaço on-line neutro e independente para os grupos tomarem decisões em conjunto.
+  t2: Ela fornece um espaço on-line neutro e independente para os grupos tomarem decisões em conjunto.
   t3: Este é um grupo diversificado de pessoas ocupadas.
-  t4: Eles não têm tempo para muitas reuniões e e-mail não funciona para debates complexos com muitas pessoas ao mesmo tempo.
-  t5: Vamos ver como, em vez disso, eles usam Loomio.
+  t4: Elas não têm tempo para muitas reuniões e e-mail não funciona para debates complexos com muitas pessoas ao mesmo tempo.
+  t5: Vamos ver como, em vez disso, elas usam Loomio.
   t6: |
-    Qualquer um pode começar um debate sobre qualquer assunto,
+    Qualquer pessoa pode começar um debate sobre qualquer assunto,
     é simples, claro e focado
   t7: |
     Você pode incluir o contexto para um debate bem informado,
@@ -21,11 +21,11 @@ pt_BR:
     melhor compreendida e idéias começam a surgir.
   t13: |
     Quando uma solução potencial vem à tona
-    qualquer um pode começar uma proposta, que tem um prazo definido.
+    qualquer pessoa pode começar uma proposta, que tem um prazo definido.
   t14: A tomada de decisão acontece no lado direito.
   t15: |
     Quando as pessoas manifestam as suas posições elas são
-    solicitas a dar um resumo de uma frase que explica as suas decisões.
+    solicitadas a fazer um resumo em uma frase que explica as suas decisões.
   t16: |
     Isto torna mais fácil ver porque as pessoas sentem do jeito
     que estão e destaca os pontos principais.
@@ -34,7 +34,7 @@ pt_BR:
   t19: |
     As pessoas podem definir seu próprio compromisso de tempo
     e nível de engajamento, enquanto se mantêm no circuito.
-  t20: Se você tem uma preocupação séria que você pode usar a opção da bandeira vermelha.
+  t20: Se você tem uma preocupação séria, você pode usar a opção da bandeira vermelha.
   t21: |
     Você pode mudar de idéia sobre a sua posição quando uma
     nova informação vem à luz.
