--- a/config/locales/for_use_loomio-1_how-it-works-video_uk.yml
+++ b/config/locales/for_use_loomio-1_how-it-works-video_uk.yml
@@ -14,7 +14,7 @@ uk:
     Контекст може бути редагований подібно до Вікіпедії,
     тому він може бути змінений під час ведення дискусії.
   t9: Спільний діалог продовжується ліворуч.
-  t10: Будь хто може додати інформацію та дати свою перспективу.
+  t10: Будь хто може додати інформацію та поділитися своєю точкою зору.
   t11: Ця частина процесу не є обмеженою за часом.
   t12: |
     Чим більше людей приймає участь,
