--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -823,6 +823,11 @@ en:
         members_invitable_by_coordinators: "Coordinators only"
         members_invitable_by_members: "All group members"
         privacy: Privacy
+        visibility_visible_header: 'Visible'
+        visibility_hidden_header: 'Hidden'
+        visibility_visible_description: 'People can find this group and ask to join.'
+        visibility_hidden_description: 'Joining this group is by invitation only.'
+
         privacy_public_header: Public
         privacy_public_description: Discussions are public, unless made private. Anyone can find the group and ask to join.
         privacy_private_header: Mostly private
@@ -835,7 +840,7 @@ en:
         group_members_invitable_by:
           "Only coordinators"
         submit: Submit
-        viewable_by_parent_members_header: Allow all %{group} members to see this subgroup and its discussions
+        is_visible_to_parent_members_header: Allow all %{group} members to see this subgroup and its discussions
       membership_request:
         introduction: "Introduce yourself"
       motion:
