join group without membership request

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -292,6 +292,8 @@ en:
   previous_requests: Previous requests
   approved_by_person: Approved by %{person}
   ignored_by_perosn: Ignored by %{person}
+  join_group_btn: Join group
+  you_have_joined_group: You have joined %{group_name}
   confirm_approve_membership_request: "Are you sure you want to add %{which_user} to the group?"
   cancel_membership_request: "Cancel request"
   ignore_request: "Ignore request"
