--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -250,6 +250,38 @@ en:
   #
   # GROUP PAGE
   #
+  group_form:
+    visible_to:
+      label: Who can find this group?
+      public: 'Anyone (list the group publicly)'
+      parent_members: 'Members of %{parent_group_name} can find the group'
+      members: 'Members only (the group will not be listed)'
+
+    membership_granted_upon:
+      label: How do people join?
+      hidden_parent:
+        request: 'Anyone in %{parent_group_name} can join'
+        approval: 'Anyone in %{parent_group_name} can request to join'
+      request: Anyone can join the group
+      approval: Anyone can request to join
+      invitation: Joining is by invitation only
+
+    members_can_add_members:
+      label: Who can add members?
+      'true': All members
+      'false': Coordinators only
+
+    parent_members_can_see_discussions:
+      label: Discussion privacy
+      'true': 'Anyone in %{parent_group_name} can see discussions'
+      'false': Only members can see discussions
+
+    discussion_privacy_options:
+      label: Discussion privacy
+      public_only: Public discussions only (visible to anyone)
+      public_or_private: Allow public and private discussions
+      private_only: Private discussions only (visible only to group members)
+
 
   setup_steps_title: "Next steps:"
   setup_step_1: "Check out the example discussion"
@@ -757,10 +789,6 @@ en:
   motion_form:
     header: "New proposal"
     name_helper: "Make the title as clear and succinct as possible."
-
-  group_form:
-    invitation_settings: "Invitation Settings"
-    admins_only: "Coordinators only"
 
   vote_form:
     header: "State your position"
