--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -974,6 +974,8 @@ en:
   #
 
   email:
+    by_who: "by %{person}"
+    reply_to_this_discussion: Reply to this discussion
     to_join_discussion:
       subject: "%{who} wants you to join a discussion on Loomio"
       content: "You've been invited to participate in the discussion: %{discussion}"
