--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -484,7 +484,7 @@ en:
 
   discussion_context:
     started_html: "Started %{when} ago by <a href='%{link}' class='%{link_class}'>%{who}</a>"
-    last_edited_html: "Last edited %{when} ago by <a href='%{link}' class='%{link_class}'>%{who}</a>"
+    edited: "Edited %{when} ago"
     see_revision_history: "See revision history"
     see_history: "See history"
 
